# twitch-1337

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE-APACHE  README.md  config.toml.example
crates/llm/: Cargo.toml
crates/llm/src/: agent.rs  client.rs  error.rs  lib.rs  ollama.rs  openai.rs  types.rs  util.rs
crates/twitch-1337/: .gitignore  Cargo.toml  config.toml.example
crates/twitch-1337/data/prompts/: ai_instructions.md  dreamer.md  system.md
crates/twitch-1337/src/: config.rs  lib.rs  llm_factory.rs  main.rs
crates/twitch-1337/src/ai/: command.rs  mod.rs
crates/twitch-1337/src/aviation/: tracker.rs
crates/twitch-1337/src/commands/: news.rs
crates/twitch-1337/src/util/: persist.rs
crates/twitch-1337/tests/: ai.rs  ai_channel.rs  aviation.rs  flight_tracker.rs  grok.rs  memory_integration.rs  memory_v2.rs  news.rs
crates/twitch-1337/tests/common/: fake_llm.rs  test_bot.rs
crates/web/: Cargo.toml  build.rs
crates/web/assets/: app.css  app.js
crates/web/src/: clock.rs  dev.rs  error.rs  flash.rs  helix.rs  lib.rs  nav.rs  state.rs
crates/web/src/auth/: mod.rs  mod_check.rs  role_check.rs  routes.rs  session.rs
crates/web/src/routes/: ai_models.rs  assets.rs  flights.rs  health.rs  leaderboard.rs  memory.rs  mod.rs  pings.rs  settings.rs  stubs.rs
crates/web/templates/: base.html  settings.html  sidebar.html
crates/web/templates/auth/: oauth_failed.html
crates/web/templates/flights/: list.html
crates/web/templates/memory/: conflict.html  editor.html  state_list.html  users_list.html
crates/web/templates/pings/: form.html  list.html  row.html
crates/web/templates/settings/: _macros.html  index.html
crates/web/tests/: ai_models.rs  assets_smoke.rs  auth_follower_check.rs  auth_mod_check.rs  auth_next.rs  auth_owner.rs  auth_routes.rs  auth_session.rs  auth_signed_cookies.rs  auth_viewer_guard.rs  auth_viewer_tier.rs  flights_route.rs  helix_follower_check.rs  helix_moderator_check.rs  helix_pagination.rs  leaderboard_route.rs  memory_read.rs  memory_write.rs  pings_routes.rs  settings_route.rs  sidebar_smoke.rs
crates/web/tests/helpers/: mod.rs
(+225 files in other folders)
