[package]
name = "llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider-agnostic LLM client (OpenAI, Ollama) used by twitch-1337"

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[lints]
workspace = true
