[package]
name = "twitch-1337"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
twitch-1337-core = { path = "../core" }
chrono = { workspace = true }
chrono-tz = { workspace = true }
color-eyre = { workspace = true }
secrecy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
